--- a/AmitProject/assets/css/Style.css
+++ b/AmitProject/assets/css/Style.css
@@ -348,7 +348,7 @@ nav input[type="text"]{
 }
 .welcome{
 	width: 95%;
-	padding: 10px 0px;
+	padding: 0px 0px;
 	display: flex;
 	justify-content: space-between;
 }
@@ -361,16 +361,22 @@ i{
 }
 .welcome h5,
 .welcome .welcome-right i{
-	font-size: 16px;
+	font-size: 12px;
 	margin-left: 10px;
 	border-radius: 50%;
-	padding: 7px 10px;
+	padding: 4px 7px;
 	font-weight: 600;
 	border: 0.5px solid black;
+	
 }
 .welcome .welcome-right i{
 	padding: 0;
-	padding: 8px 8px;
+	padding: 5px 5px;
+	font-size: 12px;
+	margin-top: 3px;
+	margin-bottom: 3px;
+
+	
 }
 .welcome h5:hover,
 .welcome .welcome-right i:hover{
@@ -388,6 +394,9 @@ i{
 }
 .tooltiptext:hover{
 	visibility: visible;
+}
+nav .actual-nav{
+	margin-top: 0px;
 }
 /* Slides ********************************************************************/
 
@@ -1109,6 +1118,12 @@ td[class*="span"]{
 	background: #a83232;
 	color: #fff;
 }
+
+/*  ****************************This is the styling for Checkbox  */
+
+
+
+
 
 
 
